# kakaotalk-self-replication

./: .gitignore  README.md  client.js  main.py  pyproject.toml
app/: config.py
app/enums/: __init__.py
app/routers/: chat.py
app/services/: __init__.py
app/services/chatbot/: __init__.py  chat.py
app/services/prompt/: create.py
app/tasks/: gemini.py  generate.py
app/utility/: utils.py
