[project]
name = "kakaotalk-self-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji==2.14.1",
    "fastapi==0.116.1",
    "google==3.0.0",
    "google-genai==1.32.0",
    "kiwipiepy==0.21.0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "uvicorn==0.35.0",
]
